[package]
name = "git-github"
version = "0.1.2"
edition = "2021"
authors = ["dalei <guoyunlei@live.com>"]
description = "git command line plugin of github"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
git2 = { version = "0.17.2", features = ["openssl-sys", "https"] }
nom = "7.1.3"
open = "5.0.0"
regex = "1.9.1"
reqwest = "0.11.18"
url = "2.4.0"
