[package]
name = "git-github"
version = "0.1.5"
edition = "2021"
authors = ["dalei <guoyunlei@live.com>"]
description = "git command line plugin of github"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
config = "0.15.11"
futures = "0.3.31"
git2 = { version = "0.17.2", features = ["openssl-sys", "https"] }
nom = "7.1.3"
octocrab = "0.43.0"
open = "5.0.0"
regex = "1.9.1"
reqwest = { version= "0.11.18", features = ["json", "stream"]}
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
url = "2.4.0"

#[[bin]]
#name = "git-open"
#path = "src/main.rs"
