[package]
name = "git-github"
version = "0.1.6"
edition = "2021"
authors = ["dalei <guoyunlei@live.com>"]
description = "git command line plugin of github"
license = "MIT"
# Declare every binary explicitly below instead of auto-discovering them.
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
config = "0.15.11"
futures = "0.3.31"
git2 = { version = "0.21.0", features = ["openssl-sys", "https"] }
nom = "8.0.0"
octocrab = "0.53.0"
open = "5.0.0"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }

# Short native subcommands, usable as `git open`, `git ac`, `git issues`.
[[bin]]
name = "git-open"
path = "src/bin/git-open.rs"

[[bin]]
name = "git-ac"
path = "src/bin/git-ac.rs"

[[bin]]
name = "git-pr"
path = "src/bin/git-pr.rs"

[[bin]]
name = "git-issues"
path = "src/bin/git-issues.rs"
